--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Webpack + React</title>
-</head>
-<body>
-    <div id="react-application"></div>
-</body>
-<script src="app.js"></script>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Recipe Shopper</title>
+    </head>
+
+    <body>
+        <div id="react-application"></div>
+    </body>
+
+    <script src="app.js"></script>
 </html>
