--- a/app/index.html
+++ b/app/index.html
@@ -12,5 +12,6 @@
         <div id="react-application"></div>
     </body>
 
+    <script src="https://cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
     <script src="app.js"></script>
 </html>
